boardgame-ingress-service.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress-service
  annotations:
   kubernetes.io/ingress.class: nginx
   # cert-manager.io/cluster-issuer: letsencrypt
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame-ssvc
                port:
                  number: 80
