deployment-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: boardgame-ssvc
spec:
  selector:
    app: boardgame
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080 
  type: ClusterIP

  ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame-ssvc
                port:
                  number: 80
